# redeath

./: .gitattributes  .gitignore  BEVY_maybe.md  BUSINESS.md  Cargo.toml  README.md  TODOS.md
assets/: ldtk_icons.aseprite
assets/convo/: bg.aseprite
assets/environment/: Ambiance.aseprite  Platforms.aseprite  common_platforms.aseprite
assets/items/: coin.aseprite  coin_bank.aseprite  egg.aseprite  replenish.aseprite  skelly_dash.aseprite
assets/light/: coin.aseprite  firefly16.aseprite  replenish.aseprite  static128.aseprite  static64.aseprite
assets/menu/: bevy.aseprite  dreamlake.aseprite  overworld.ldtk  savefile.aseprite  savefile_button.aseprite  title.aseprite
assets/palettes/: inkpink.pal  shift6.pal  starry-12.pal  waverator.pal
assets/play/: convo.aseprite  lenny.aseprite  lenny2.aseprite  new_shift_palette.aseprite  reaper.aseprite  scene1.aseprite  scene2.aseprite  scene3 copy.aseprite  scene3.aseprite  slide.aup3  spike_scratch.aseprite  test.ldtk
assets/player/: lenny.aseprite
assets/reaper/: indicator_shift.aseprite  reaper.aseprite  scythe.aseprite
assets/shaders/: final_post_processing.wgsl  light_cutout_mat.wgsl  light_mat.wgsl  palette_mat.wgsl  shifted_palette_mat.wgsl  simple_palette_mat.wgsl
assets/transitions/: circle.aseprite
assets/worlds/: canyon.ldtk  lake.ldtk
debug/savefiles/: A.json  C.json
planning/: BUSINESS.md  TODO.md  TODOS.md  VALUES.md
scripts/: build_apple_silicon_local.sh  build_windows.sh  create_icns.sh
src/: consts.rs  input.rs  lazy.rs  main.rs  math.rs  persistent_resource.rs  root.rs  types.rs
(+296 files in other folders)
