[package]
name = "redeath"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.2"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
rand = "0.8.5"
bevy_2delight_anims = { path = "../bevy_2delight_anims" }
bevy_ecs_ldtk = "0.10.0"
bevy_ecs_tilemap = { version = "0.14.0", default-features = false }
bevy_pkv = "0.11"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
